added and styled the gallery

--- a/index.html
+++ b/index.html
@@ -286,7 +286,35 @@
 </section>
 
 <section class="gallery">
-    Gallery
+    <figure class="galery__item gallery__item__1">
+        <img src="img/gal-1.jpeg" alt="gal 1" class="gallery__img">
+    </figure>
+     <figure class="gallery__item gallery__item__2"><img src="img/gal-2.jpeg" alt="gal img 2" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__3"><img src="img/gal-3.jpeg" alt="gal img 3" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__4"><img src="img/gal-4.jpeg" alt="gal img 4" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__5"><img src="img/gal-5.jpeg" alt="gal img 5" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__6"><img src="img/gal-6.jpeg" alt="gal img 6" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__7"><img src="img/gal-7.jpeg" alt="gal img 7" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__8"><img src="img/gal-8.jpeg" alt="gal img 8" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__9"><img src="img/gal-9.jpeg" alt="gal img 9" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__10"><img src="img/gal-10.jpeg" alt="gal img 10" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__11"><img src="img/gal-11.jpeg" alt="gal img 11" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__12"><img src="img/gal-12.jpeg" alt="gal img 12" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__13"><img src="img/gal-13.jpeg" alt="gal img 13" class="gallery__img">
+    </figure>
+    <figure class="gallery__item gallery__item__14"><img src="img/gal-14.jpeg" alt="gal img 14" class="gallery__img">
+    </figure>
 </section>
 
 <footer class="footer">
