--- a/index.html
+++ b/index.html
@@ -318,7 +318,15 @@
 </section>
 
 <footer class="footer">
-    Footer
+    <ul class="nav">
+        <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Download home planer</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
+    </ul>
+    <p class="copyright">&copy;Fred Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus consequatur excepturi hic illum ipsa perspiciatis quo, sint ullam veritatis voluptas!</p>
 </footer>
 
 </body>
